# My-App

./: .gitignore  CMakeLists.txt  Convert-936-To-UTF8.ps1  Detect-Encoding.ps1  Qt connect.md  Rename-FFT11-Files.ps1  Update-Include-And-CMake.ps1  core_api_integration.md  docs.md  project_tree.txt  tree.txt  项目结构.txt
app/: RunRequest.h  RunRequestMapper.cpp  RunRequestMapper.h  main.cpp
core/: Utils.cpp  Utils.h  common.h
core_api/: CoreAnalysisFacade.cpp  CoreAnalysisFacade.h  CoreAnalysisRequest.h  CoreAnalysisResult.h  CoreChannelInfo.h  CoreChannelListResult.h  CoreDataFacade.cpp  CoreDataFacade.h  CoreDataRequest.h  CoreFileInfo.h  CoreSignalData.h
domain/: FileTypeUtils.h  HdfChannelUtils.h  ParseUtils.cpp  ParseUtils.h  RpmSpectrogram.h  Spectrogram.h  Types.h
engine/: Engine.cpp  Engine.h
executor/: FFTExecutor.cpp  FFTExecutor.h  ParallelRunner.cpp  ParallelRunner.h
features/fft_vs_rpm/: FFTvsRpmMapper.cpp  FFTvsRpmMapper.h
features/fft_vs_time/: FFTvsTimeAnalyzer.cpp  FFTvsTimeAnalyzer.h
features/level_vs_rpm/: LevelVsRpmAnalyzer.h  levelVsRpmAnalyzer.cpp
features/level_vs_time/: LevelVsTimeAnalyzer.cpp  LevelVsTimeAnalyzer.h
features/octave_band/: OctaveAnalyzer.cpp  OctaveAnalyzer.h
features/order_tracking/: AngleResampler.cpp  AngleResampler.h
fft/: Analyzer.cpp  Analyzer.h  FFTCore.cpp  FFTCore.h
flows/: FFTFlow.cpp  FFTFlow.h  FFTvsRpmFlow.cpp  FFTvsRpmFlow.h  FFTvsTimeFlow.cpp  FFTvsTimeFlow.h  LevelVsRpmFlow.cpp  LevelVsRpmFlow.h  LevelVsTimeFlow.cpp  LevelVsTimeFlow.h  OctaveFlow.cpp  OctaveFlow.h
io/: ATFXReader.cpp  ATFXReader.h  HDFReader.cpp  HDFReader.h  WAVReader.cpp  WAVReader.h
planner/: TaskBuilder.cpp  TaskBuilder.h  TaskPlanner.cpp  TaskPlanner.h
preprocess/: AudioBlocking.cpp  AudioBlocking.h  Preprocessing.cpp  Preprocessing.h  TimeWeighting.cpp  TimeWeighting.h  Weighting.cpp  Weighting.h  Window.cpp  Window.h
relitu/: relitu.py
report/: ReportWriter.cpp  ReportWriter.h
services/: DataReaderService.cpp  DataReaderService.h  ExportService.cpp  ExportService.h  SpectrumService.h  spectrumService.cpp
